syntax = "proto3";
package proto;
option go_package = "github.com/bdreece/hopper/pkg/proto";

import "device.proto";
import "tenant.proto";

message DeviceModel {
  string uuid = 4;
  string name = 5;
  optional string description = 6;

  uint32 tenant_id = 7;
}

message DeviceModels { repeated DeviceModel models = 1; }

message GetDeviceModelRequest {
  oneof where {
    string uuid = 1;
    GetDeviceRequest device = 2;
  }
}

message GetDeviceModelsRequest {
  oneof where { GetTenantRequest tenant = 1; }
}